# internet-identity

./: .env.development  .env.production  .eslintignore  .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  HACKING.md  README.md  jest.config.cjs  package-lock.json  package.json  tsconfig.json  tsconfig.spec.json  vite.config.ts  vite.plugins.ts  vite.showcase.config.ts  webpack.config.js
.github/actions/canister-test-cache/: action.yml
.github/workflows/: canister-tests.yml  deploy_archive.yml  frontend-checks.yml
docker-test-env/: README.md
scripts/: build  deploy-archive  docker-build
src/archive/src/: main.rs
src/archive/tests/: tests.rs
src/baz/: Cargo.toml
src/baz/src/: lib.rs
src/canister_tests/src/: framework.rs
src/canister_tests/src/api/: archive.rs
src/foobar/: Cargo.toml
src/foobar/src/: lib.rs
src/frontend/: index.html  screenshots.mjs  test-setup.ts
src/frontend/src/: features.ts
src/frontend/src/components/: footer.ts  icons.ts  loader.ts  userNumber.ts
src/frontend/src/flows/: promptUserNumber.ts  register.ts
src/frontend/src/styles/: main.css
src/frontend/src/types/: index.d.ts
src/frontend/src/utils/: iiConnection.ts  lit-html.ts  utils.ts
src/internet_identity/: Cargo.toml  internet_identity.did
src/internet_identity/src/: anchor_management.rs  archive.rs  assets.rs  delegation.rs  http.rs  main.rs  state.rs  storage.rs
src/internet_identity/tests/: archive_integration_tests.rs
src/internet_identity_interface/src/: archive.rs  lib.rs
src/showcase/: index.html
src/showcase/src/: index.ts
(+8 files in other folders)
