[package]
name = "foobar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
baz = { path = "../baz" }
sha2 = "^0.9" # set bound to match ic-certified-map bound

[lib]
proc-macro = true
